--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "build": "vite build"
   },
   "dependencies": {
+    "konva": "^8.3.2",
     "vue": "^3.0.4",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@vue/compiler-sfc": "^3.0.4",
+    "node-sass": "^4.12.0",
+    "sass": "^1.18.0",
+    "sass-loader": "^7.1.0",
+    "vite": "^1.0.0-rc.13"
   }
 }
